release on 5.6.10.1