@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>edu.stanford.protege</groupId>
 		<artifactId>protege-parent</artifactId>
-		<version>5.6.10-SNAPSHOT</version>
+		<version>5.6.10.1</version>
 		<relativePath>../</relativePath>
 	</parent>
 
@@ -16,7 +16,8 @@
 	<description>Standard build of the Protege Desktop ontology editor.</description>
 
 	<properties>
-		<conf.extra.args>-XX:CompileCommand=exclude,javax/swing/text/GlyphView,getBreakSpot</conf.extra.args>
+		<conf.extra.args>--add-opens java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.net.www=ALL-UNNAMED -XX:CompileCommand=exclude,javax/swing/text/GlyphView,getBreakSpot</conf.extra.args>
+		<!-- <conf.extra.args>-XX:CompileCommand=exclude,javax/swing/text/GlyphView,getBreakSpot</conf.extra.args> -->
 		<osx.bundle.name>Protégé.app</osx.bundle.name>
 	</properties>
 
@@ -50,31 +51,23 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.supplement</artifactId>
-		</dependency> -->
-
-		<!-- <dependency>
-			<groupId>edu.stanford.protege</groupId>
-			<artifactId>jre.os-x</artifactId>
-			<version>11.0.25_9</version>
-			<scope>runtime</scope>
+		<dependency>
+			<groupId>org.eclipse.platform</groupId>
+			<artifactId>org.eclipse.osgi</artifactId>
+			<version>3.18.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>edu.stanford.protege</groupId>
-			<artifactId>jre.win</artifactId>
-			<version>11.0.25_9</version>
-			<scope>runtime</scope>
+			<groupId>org.eclipse.platform</groupId>
+			<artifactId>org.eclipse.equinox.common</artifactId>
+			<version>3.16.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>edu.stanford.protege</groupId>
-			<artifactId>jre.linux</artifactId>
-			<version>11.0.25_9</version>
-			<scope>runtime</scope>
-		</dependency> -->
+			<groupId>org.eclipse.platform</groupId>
+			<artifactId>org.eclipse.equinox.registry</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 
 	</dependencies>
 	
@@ -84,8 +77,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 
